# cloudsmith-cs-interview-candidate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Demo_build  Demo_build.yml  build_package.yml  promote_package.yml  promote_package_copy.yml  release_package.yml
src/dummy_package/: __init__.py
src/example_package/: __init__.py
