[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummy_package"                
version = "0.0.1"                     
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name="Example Author", email="author@example.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
