[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"
version = "0.0.2"
authors = [
  { name="Somya Lavania", email="somyalavania3@gmail.com" },
]
description = "A small example package for Cloudsmith assessment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["example_package"]
