[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"
version = "0.0.4"
description = "Example package for Cloudsmith assessment."
authors = [{ name = "Somya Lavania", email = "somyalavania3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/example_package"]
